Implemented email sending + finished task to check if auction is finished + email templates finished + added state to billing details

--- a/templates/auction_won.html
+++ b/templates/auction_won.html
@@ -134,7 +134,7 @@
 
         <div class="info-section">
             <div class="info-title">Your Account Balance</div>
-            <p><strong>Remaining Balance:</strong> {{ email_data.user.get_current_balance }}</p>
+            <p><strong>Remaining Balance:</strong> {{ email_data.user.current_balance }}</p>
             <p><strong>Reserved Balance:</strong> {{ email_data.user.balance_reserved }}</p>
         </div>
 
